Well, the pots sorta work and stuff now, but don't craft and the dirty ones texture-error still.

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -22,7 +22,7 @@
 	"item-gear-grimy": "Grimy Gear",
 	"item-gear-steel": "Restored steel Gear",
 	"item-gear-preptempgear": "Prepared temporal Gear",
-	
+
 	"itemdesc-primamateria": "<font color=\"#99c9f9\"><i>The gear was merely a vessel. This is the truth it contained.</i></font><br>",
 	"itemdesc-tools-basic": "<font color=\"#ff0000\">Too weak to repair plate armors</font>",
 	"itemdesc-basicbooster": "Permanently increases all max soil nutrient values by 20%",
@@ -30,84 +30,94 @@
 	"itemdesc-gear-grimy": "<font color=\"#99c9f9\"><i>Rust and grime flake across the surface, slightly detached from the metal below.</i></font>",
 	"itemdesc-gear-steel": "<font color=\"#99c9f9\"><i>A restored steel gear, all rust and grime removed from its surface.</i></font>",
 	"itemdesc-gear-preptempgear": "<font color=\"#99c9f9\"><i>A steel gear, coated in Prima materia. Ready for the final step.</i></font>",
-	
+
 	"block-metalpan-copper": "Copper pan",
 	"block-metalmininglantern-*": "Mining lantern",
 	"block-primitivemininglantern-*": "Simple mining lantern",
-	"block-metalcookingpot-copper-empty": "Copper Cooking Pot",
-	"block-metalcookingpot-tinbronze-empty": "Tin Bronze Cooking Pot",
-	"block-metalcookingpot-blackbronze-empty": "Black Bronze Cooking Pot",
-	"block-metalcookingpot-iron-empty": "Iron Cooking Pot",
-	"block-metalcookingpot-meteoriciron-empty": "Meteoric Iron Cooking Pot",
-	"block-metalcookingpot-gold-empty": "Gold Cooking Pot",
-	"block-metalcookingpot-silver-empty": "Silver Cooking Pot",
-	"block-metalcookingpot-electrum-empty": "Electrum Cooking Pot",
-	"block-metalcookingpot-steel-empty": "Steel Cooking Pot",
-	"block-metalcookingpot-stainlesssteel-empty": "Stainless Steel Cooking Pot",
+	"block-metalpot-copper-empty": "Copper Cooking Pot",
+	"block-metalpot-tinbronze-empty": "Tin Bronze Cooking Pot",
+	"block-metalpot-blackbronze-empty": "Black Bronze Cooking Pot",
+	"block-metalpot-iron-empty": "Iron Cooking Pot",
+	"block-metalpot-meteoriciron-empty": "Meteoric Iron Cooking Pot",
+	"block-metalpot-gold-empty": "Gold Cooking Pot",
+	"block-metalpot-silver-empty": "Silver Cooking Pot",
+	"block-metalpot-electrum-empty": "Electrum Cooking Pot",
+	"block-metalpot-steel-empty": "Steel Cooking Pot",
+	"block-metalpot-stainlesssteel-empty": "Stainless Steel Cooking Pot",
+	"block-metalpotdirty-copper-empty": "Dirty Copper Cooking Pot",
+	"block-metalpotdirty-tinbronze-empty": "Dirty Tin Bronze Cooking Pot",
+	"block-metalpotdirty-blackbronze-empty": "Dirty Black Bronze Cooking Pot",
+	"block-metalpotdirty-iron-empty": "Dirty Iron Cooking Pot",
+	"block-metalpotdirty-meteoriciron-empty": "Dirty Meteoric Iron Cooking Pot",
+	"block-metalpotdirty-gold-empty": "Dirty Gold Cooking Pot",
+	"block-metalpotdirty-silver-empty": "Dirty Silver Cooking Pot",
+	"block-metalpotdirty-electrum-empty": "Dirty Electrum Cooking Pot",
+	"block-metalpotdirty-steel-empty": "Dirty Steel Cooking Pot",
+	"block-metalpotdirty-stainlesssteel-empty": "Dirty Stainless Steel Cooking Pot",
 	"block-bloomerybaseadvanced-north": "Advanced bloomery base",
 	"block-bloomerychimneyadvanced": "Advanced bloomery chimney",
-	
+
 	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has an increased chance to find nuggets",
-	"blockdesc-metalcookingpot-copper-empty": "<font color=\"#99c9f9\"><i>Can hold 7 servings</i></font>",
-	"blockdesc-metalcookingpot-tinbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
-	"blockdesc-metalcookingpot-blackbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 9 servings</i></font>",
-	"blockdesc-metalcookingpot-iron-empty": "<font color=\"#99c9f9\"><i>Can hold 10 servings</i></font>",
-	"blockdesc-metalcookingpot-meteoriciron-empty": "<font color=\"#99c9f9\"><i>Can hold 11 servings</i></font>",
-	"blockdesc-metalcookingpot-gold-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
-	"blockdesc-metalcookingpot-silver-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
-	"blockdesc-metalcookingpot-electrum-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
-	"blockdesc-metalcookingpot-steel-empty": "<font color=\"#99c9f9\"><i>Can hold 13 servings</i></font>",
-	"blockdesc-metalcookingpot-stainlesssteel-empty": "<font color=\"#99c9f9\"><i>Can hold 14 servings</i></font>",
-	
+	"blockdesc-metalpot-copper-empty": "<font color=\"#99c9f9\"><i>Can hold 7 servings</i></font>",
+	"blockdesc-metalpot-tinbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
+	"blockdesc-metalpot-blackbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 9 servings</i></font>",
+	"blockdesc-metalpot-iron-empty": "<font color=\"#99c9f9\"><i>Can hold 10 servings</i></font>",
+	"blockdesc-metalpot-meteoriciron-empty": "<font color=\"#99c9f9\"><i>Can hold 11 servings</i></font>",
+	"blockdesc-metalpot-gold-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalpot-silver-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalpot-electrum-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalpot-steel-empty": "<font color=\"#99c9f9\"><i>Can hold 13 servings</i></font>",
+	"blockdesc-metalpot-stainlesssteel-empty": "<font color=\"#99c9f9\"><i>Can hold 14 servings</i></font>",
+
 	"block-rawdecovessel-harvest": "Raw storage vessel (Harvest)",
-    "block-rawdecovessel-honeydew": "Raw storage vessel (Honeydew)",
-    "block-rawdecovessel-beehive": "Raw storage vessel (Beehive)",
-    "block-rawdecovessel-chthonic": "Raw storage vessel (Chthonic)",
-    "block-rawdecovessel-loam": "Raw storage vessel (Loam)",
-    "block-rawdecovessel-copper": "Raw storage vessel (Copper)",
-    "block-rawdecovessel-ashforest": "Raw storage vessel (Ash Forest)",
-    "block-rawdecovessel-rime": "Raw storage vessel (Rime)",
-    "block-rawdecovessel-earthen": "Raw storage vessel (Earthen)",
-    "block-rawdecovessel-undergrowth": "Raw storage vessel (Undergrowth)",
-    "block-rawdecovessel-seasalt": "Raw storage vessel (Seasalt)",
-    "block-rawdecovessel-cowrie": "Raw storage vessel (Cowrie)",
-    "block-rawdecovessel-springflowers": "Raw storage vessel (Springflowers)",
-    "block-rawdecovessel-rutile": "Raw storage vessel (Rutile)",
-    "block-rawdecovessel-rain": "Raw storage vessel (Rain)",
-    "block-rawdecovessel-volcanic": "Raw storage vessel (Volcanic)",
-    "block-rawdecovessel-oxblood": "Raw storage vessel (Oxblood)",
-    "block-rawdecovessel-caveaurora": "Raw storage vessel (Cave aurora)",
-    "block-rawdecovessel-cloisonne": "Raw storage vessel (Cloisonné)",
-    "block-rawdecovessel-collonade": "Raw storage vessel (Collonade)",
-    "block-rawdecovessel-cornflower": "Raw storage vessel (Cornflower)",
-    "block-rawdecovessel-rattlesnake": "Raw storage vessel (Rattlesnake)",
-    "block-rawdecovessel-talik": "Raw storage vessel (Talik)",
-    "block-rawdecovessel-waves": "Raw storage vessel (Waves)",
-    "block-rawdecovessel-wintersea": "Raw storage vessel (Winter sea)",
+	"block-rawdecovessel-honeydew": "Raw storage vessel (Honeydew)",
+	"block-rawdecovessel-beehive": "Raw storage vessel (Beehive)",
+	"block-rawdecovessel-chthonic": "Raw storage vessel (Chthonic)",
+	"block-rawdecovessel-loam": "Raw storage vessel (Loam)",
+	"block-rawdecovessel-copper": "Raw storage vessel (Copper)",
+	"block-rawdecovessel-ashforest": "Raw storage vessel (Ash Forest)",
+	"block-rawdecovessel-rime": "Raw storage vessel (Rime)",
+	"block-rawdecovessel-earthen": "Raw storage vessel (Earthen)",
+	"block-rawdecovessel-undergrowth": "Raw storage vessel (Undergrowth)",
+	"block-rawdecovessel-seasalt": "Raw storage vessel (Seasalt)",
+	"block-rawdecovessel-cowrie": "Raw storage vessel (Cowrie)",
+	"block-rawdecovessel-springflowers": "Raw storage vessel (Springflowers)",
+	"block-rawdecovessel-rutile": "Raw storage vessel (Rutile)",
+	"block-rawdecovessel-rain": "Raw storage vessel (Rain)",
+	"block-rawdecovessel-volcanic": "Raw storage vessel (Volcanic)",
+	"block-rawdecovessel-oxblood": "Raw storage vessel (Oxblood)",
+	"block-rawdecovessel-caveaurora": "Raw storage vessel (Cave aurora)",
+	"block-rawdecovessel-cloisonne": "Raw storage vessel (Cloisonné)",
+	"block-rawdecovessel-collonade": "Raw storage vessel (Collonade)",
+	"block-rawdecovessel-cornflower": "Raw storage vessel (Cornflower)",
+	"block-rawdecovessel-rattlesnake": "Raw storage vessel (Rattlesnake)",
+	"block-rawdecovessel-talik": "Raw storage vessel (Talik)",
+	"block-rawdecovessel-waves": "Raw storage vessel (Waves)",
+	"block-rawdecovessel-wintersea": "Raw storage vessel (Winter sea)",
 
-    "block-rawdecoplanter-ochre": "Raw planter (Ochre)",
-    "block-rawdecoplanter-cthonic": "Raw planter (Chthonic)",
-    "block-rawdecoplanter-loam": "Raw planter (Loam)",
-    "block-rawdecoplanter-copper": "Raw planter (Copper)",
-    "block-rawdecoplanter-ashforest": "Raw planter (Ashforest)",
-    "block-rawdecoplanter-rime": "Raw planter (Rime)",
-    "block-rawdecoplanter-earthern": "Raw planter (Earthen)",
-    "block-rawdecoplanter-undergrowth": "Raw planter (Undergrowth)",
-    "block-rawdecoplanter-seasalt": "Raw planter (Seasalt)",
-    "block-rawdecoplanter-tenmoku": "Raw planter (Tenmoku)",
-    "block-rawdecoplanter-amber": "Raw planter (Amber)",
+	"block-rawdecoplanter-ochre": "Raw planter (Ochre)",
+	"block-rawdecoplanter-cthonic": "Raw planter (Chthonic)",
+	"block-rawdecoplanter-loam": "Raw planter (Loam)",
+	"block-rawdecoplanter-copper": "Raw planter (Copper)",
+	"block-rawdecoplanter-ashforest": "Raw planter (Ashforest)",
+	"block-rawdecoplanter-rime": "Raw planter (Rime)",
+	"block-rawdecoplanter-earthern": "Raw planter (Earthen)",
+	"block-rawdecoplanter-undergrowth": "Raw planter (Undergrowth)",
+	"block-rawdecoplanter-seasalt": "Raw planter (Seasalt)",
+	"block-rawdecoplanter-tenmoku": "Raw planter (Tenmoku)",
+	"block-rawdecoplanter-amber": "Raw planter (Amber)",
 
-    "block-rawdecoflowerpot-ochre": "Raw flowerpot (Ochre)",
-    "block-rawdecoflowerpot-boneash": "Raw flowerpot (Bone ash)",
-    "block-rawdecoflowerpot-copper": "Raw flowerpot (Copper)",
-    "block-rawdecoflowerpot-celadon": "Raw flowerpot (Celadon)",
-    "block-rawdecoflowerpot-earthern": "Raw flowerpot (Earthen)",
-    "block-rawdecoflowerpot-moss": "Raw flowerpot (Moss)",
-    "block-rawdecoflowerpot-seasalt": "Raw flowerpot (Seasalt)",
-    "block-rawdecoflowerpot-tenmoku": "Raw flowerpot (Tenmoku)",
-    "block-rawdecoflowerpot-amber": "Raw flowerpot (Amber)",
-    "block-rawdecoflowerpot-rutile": "Raw flowerpot (Rutile)",
-	
+	"block-rawdecoflowerpot-ochre": "Raw flowerpot (Ochre)",
+	"block-rawdecoflowerpot-boneash": "Raw flowerpot (Bone ash)",
+	"block-rawdecoflowerpot-copper": "Raw flowerpot (Copper)",
+	"block-rawdecoflowerpot-celadon": "Raw flowerpot (Celadon)",
+	"block-rawdecoflowerpot-earthern": "Raw flowerpot (Earthen)",
+	"block-rawdecoflowerpot-moss": "Raw flowerpot (Moss)",
+	"block-rawdecoflowerpot-seasalt": "Raw flowerpot (Seasalt)",
+	"block-rawdecoflowerpot-tenmoku": "Raw flowerpot (Tenmoku)",
+	"block-rawdecoflowerpot-amber": "Raw flowerpot (Amber)",
+	"block-rawdecoflowerpot-rutile": "Raw flowerpot (Rutile)",
+
 	"game:item-creature-locust-corrupt-sawblade-hacked": "Hacked Sawblade Locust",
 	"game:block-anvilpart-base-steel": "Anvil base (Steel)",
 	"game:block-anvilpart-top-steel": "Anvil top (Steel)"
