Started work on the Special Stock trait!

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -44,6 +44,16 @@
 	"block-metalpot-electrum-empty": "Electrum Cooking Pot",
 	"block-metalpot-steel-empty": "Steel Cooking Pot",
 	"block-metalpot-stainlesssteel-empty": "Stainless Steel Cooking Pot",
+	"block-metalpot-copper-cooked": "Copper Pot with meal",
+	"block-metalpot-tinbronze-cooked": "Tin Bronze Pot with meal",
+	"block-metalpot-blackbronze-cooked": "Black Bronze Pot with meal",
+	"block-metalpot-iron-cooked": "Iron Pot with meal",
+	"block-metalpot-meteoriciron-cooked": "Meteoric Iron Pot with meal",
+	"block-metalpot-gold-cooked": "Gold Pot with meal",
+	"block-metalpot-silver-cooked": "Silver Pot with meal",
+	"block-metalpot-electrum-cooked": "Electrum Pot with meal",
+	"block-metalpot-steel-cooked": "Steel Pot with meal",
+	"block-metalpot-stainlesssteel-cooked": "Stainless Steel Pot with meal",
 	"block-metalpotdirty-copper-empty": "Dirty Copper Cooking Pot",
 	"block-metalpotdirty-tinbronze-empty": "Dirty Tin Bronze Cooking Pot",
 	"block-metalpotdirty-blackbronze-empty": "Dirty Black Bronze Cooking Pot",
