Lang tweaks and stainless steel plate smithable

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -184,7 +184,7 @@
 	"traitdesc-shelteredstone": "No temporal stability loss whilst underground, no matter how deep.",
 	"traitdesc-mystic": "Exclusive craftable <a href=\"handbooksearch://crystal skull\">crystal skull</a>, craftable <a href=\"handbooksearch://prima materia\">prima materia</a>, and cheaper recipes for <a href=\"handbooksearch://parchment\">parchment</a>, and <a href=\"handbooksearch://pulp\">linen fiber pulp</a>",
 	"traitdesc-clairvoyance": "Able to use the <a href=\"handbooksearch://crystal skull\">crystal skull</a> to find broken static translocators",
-	"traitdesc-smith": "Exclusive craftable <a href=\"handbooksearch://armor kit\">armor kits</a>, <a href=\"handbooksearch://metal barrel\">metal barrels</a> for the alchemist, <a href=\"handbooksearch://stainless steel mix\">stainless steel mix</a> to be used in the advanced bloomery, is the only one capable of interacting with the advanced bloomery",
+	"traitdesc-smith": "Exclusive craftable <a href=\"handbooksearch://armor kit\">armor kits</a>, <a href=\"handbooksearch://metal barrel\">metal barrels</a> for the alchemist, <a href=\"handbooksearch://stainless steel mix\">stainless steel mix</a> to be used in the advanced bloomery",
 	"traitdesc-recycler": "Can break down <a href=\"handbooksearch://rusty gear\">rusty gears</a>, <a href=\"handbooksearch://metal scraps\">metal scraps</a>, and <a href=\"handbooksearch://metal parts\">metal parts</a> for metals of that type",
 	"traitdesc-tallowtanner": "Can recycle unused pelts into <a href=\"handbooksearch://scraped hide\">scraped hides</a>",
 	"traitdesc-zealot": "Exclusive craftable <a href=\"handbooksearch://temporal cloth\">Temporal cloth</a>, <a href=\"handbooksearch://forlorn hope estoc\">Forlorn Hope estoc</a>and a cheaper recipe for <a href=\"handbooksearch://prima materia\">prima materia</a>",
@@ -193,9 +193,8 @@
 	"charattribute-flaxDropRate-0.2": "+20% more flax fibers from flax crops",
 	"charattribute-charcoalDropRate-0.35": "+35% increased charcoal production",
 	"charattribute-logDropRate-0.15": "+15% chance for extra log",
-	"charattribute-saplingDropRate-3": "Triple sapling drop rate",
+	"charattribute-saplingDropRate-3": "Triple seed drop rate",
 	"charattribute-stickDropRate-0.5": "+50% chance to get double sticks from branches",
-	"charattribute-fruitTreeSurvival-2": "Doubled chance for fruit trees to root",
 	"charattribute-cropDropRate-0.3": "+30% extra crops on harvest",
 	"charattribute-wildCropDropRate-0.2": "+20% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.25": "+25% wild crop drop rate",
@@ -235,6 +234,7 @@
 	"charattribute-armorWalkSpeedAffectedness-0.05": "walk speed penalty for wearing armor increased by 5%",
 	"charattribute-meleeWeaponsDamage-0.1": "+10% melee damage",
 	"charattribute-meleeWeaponsDamage-0.3": "+30% melee damage",
+	"charattribute-meleeWeaponsDamage-0.2": "+20% melee damage",
 	"charattribute-meleeWeaponsDamage--0.2": "-20% melee damage",
 	"charattribute-rangedWeaponsDamage-0.7": "+70% ranged damage",
 	"charattribute-rangedWeaponsDamage--0.2": "-20% ranged damage",
