Temporal transmutation done, needs lang guide

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -24,6 +24,14 @@
 	"item-gear-preptempgear": "Prepared temporal Gear",
 	"item-nitraterichsoil": "Nitrate-rich soil",
 	"item-calciumrichsoil": "Calcium-rich soil",
+	"item-solutionportion-weaktemporal": "Weak temporal solution",
+	"item-solutionportion-strongtemporal": "Strong temporal solution",
+	"item-solutionportion-nitraterich": "Nitrate-rich solution",
+	"item-solutionportion-potassiumnitrate": "Potassium-Nitrate solution",
+	"incontainer-item-solutionportion-weaktemporal": "Weak temporal solution",
+	"incontainer-item-solutionportion-strongtemporal": "Strong temporal solution",
+	"incontainer-item-solutionportion-nitraterich": "Nitrate-rich solution",
+	"incontainer-item-solutionportion-potassiumnitrate": "Potassium-Nitrate solution",
 
 	"itemdesc-primamateria": "<font color=\"#99c9f9\"><i>The gear was merely a vessel. This is the truth it contained.</i></font><br>",
 	"itemdesc-tools-basic": "<font color=\"#ff0000\">Too weak to repair plate armors</font>",
