lang file changes

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -167,7 +167,7 @@
 	"traitname-fibrousfolly": "Fibrous Folly",
 	"traitname-zealot": "Zealot",
 
-	"traitdesc-temporaltransmutation": "Has the ability to craft <a href=\"handbooksearch://temporal gear\">temporal gears</a>, <a href=\"handbooksearch://sulfur chunk\">sulfur</a>, <a href=\"handbooksearch://saltpeter\">saltpeter</a>, and <a href=\"handbooksearch://high fertility soil\">high fertility soil</a> via exclusive <a href=\"handbooksearch://temporal transmutation\">barrel</a> recipes. Can also create <a href=\"handbooksearch://prima materia\">prima materia</a>",
+	"traitdesc-temporaltransmutation": "Has the ability to craft <a href=\"handbooksearch://temporal gear\">temporal gears</a>, <a href=\"handbooksearch://saltpeter\">saltpeter</a>, and <a href=\"handbooksearch://high fertility soil\">high fertility soil</a> via exclusive <a href=\"handbooksearch://temporal transmutation\">barrel</a> recipes. Can also create <a href=\"handbooksearch://prima materia\">prima materia</a>",
 	"traitdesc-artisan": "Exclusive craftable <a href=\"handbooksearch://wallpaper\">wallpapers</a>, and can glaze <a href=\"handbooksearch://Raw storage vessel\">Raw storage vessels</a>, <a href=\"handbooksearch://Raw flowerpot\">Raw flowerpots</a>, <a href=\"handbooksearch://Raw planter\">Raw planters</a>, and cheaper recipes for <a href=\"handbooksearch://red clay or blue clay or fire clay\">clay</a>",
 	"traitdesc-bowyer": "Exclusive craftable <a href=\"handbooksearch://crude bow or crude arrow or recurve bow \">bows and arrows</a>, and <a href=\"handbooksearch://quiver\">a quiver</a>",
 	"traitdesc-culinary": "Exclusive craftable <a href=\"handbooksearch://vintage beef\">Vintage beef</a>, and <a href=\"handbooksearch://cooking pot\">metal cooking pots</a>",
