--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -46,6 +46,7 @@
 	"block-primitivemininglantern-*": "Simple mining lantern",
 	"block-metalpot-copper-empty": "Copper Cooking Pot",
 	"block-metalpot-tinbronze-empty": "Tin Bronze Cooking Pot",
+	"block-metalpot-bismuthbronze-empty": "Bismuth Bronze Cooking Pot",
 	"block-metalpot-blackbronze-empty": "Black Bronze Cooking Pot",
 	"block-metalpot-iron-empty": "Iron Cooking Pot",
 	"block-metalpot-meteoriciron-empty": "Meteoric Iron Cooking Pot",
@@ -56,6 +57,7 @@
 	"block-metalpot-stainlesssteel-empty": "Stainless Steel Cooking Pot",
 	"block-metalpot-copper-cooked": "Copper Pot with meal",
 	"block-metalpot-tinbronze-cooked": "Tin Bronze Pot with meal",
+	"block-metalpot-bismuthbronze-cooked": "Bismuth Bronze Pot with meal",
 	"block-metalpot-blackbronze-cooked": "Black Bronze Pot with meal",
 	"block-metalpot-iron-cooked": "Iron Pot with meal",
 	"block-metalpot-meteoriciron-cooked": "Meteoric Iron Pot with meal",
@@ -66,6 +68,7 @@
 	"block-metalpot-stainlesssteel-cooked": "Stainless Steel Pot with meal",
 	"block-metalpotdirty-copper-empty": "Dirty Copper Cooking Pot",
 	"block-metalpotdirty-tinbronze-empty": "Dirty Tin Bronze Cooking Pot",
+	"block-metalpotdirty-tinbronze-empty": "Dirty Bismuth Bronze Cooking Pot",
 	"block-metalpotdirty-blackbronze-empty": "Dirty Black Bronze Cooking Pot",
 	"block-metalpotdirty-iron-empty": "Dirty Iron Cooking Pot",
 	"block-metalpotdirty-meteoriciron-empty": "Dirty Meteoric Iron Cooking Pot",
@@ -82,6 +85,7 @@
 	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has an increased chance to find nuggets",
 	"blockdesc-metalpot-copper-empty": "<font color=\"#99c9f9\"><i>Can hold 7 servings</i></font>",
 	"blockdesc-metalpot-tinbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
+	"blockdesc-metalpot-bismuthbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
 	"blockdesc-metalpot-blackbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 9 servings</i></font>",
 	"blockdesc-metalpot-iron-empty": "<font color=\"#99c9f9\"><i>Can hold 10 servings</i></font>",
 	"blockdesc-metalpot-meteoriciron-empty": "<font color=\"#99c9f9\"><i>Can hold 11 servings</i></font>",
@@ -90,6 +94,17 @@
 	"blockdesc-metalpot-electrum-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
 	"blockdesc-metalpot-steel-empty": "<font color=\"#99c9f9\"><i>Can hold 13 servings</i></font>",
 	"blockdesc-metalpot-stainlesssteel-empty": "<font color=\"#99c9f9\"><i>Can hold 14 servings</i></font>",
+	"blockdesc-metalpotdirty-copper-empty": "<font color=\"#99c9f9\"><i>Can hold 7 servings</i></font>",
+	"blockdesc-metalpotdirty-tinbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
+	"blockdesc-metalpotdirty-bismuthbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 8 servings</i></font>",
+	"blockdesc-metalpotdirty-blackbronze-empty": "<font color=\"#99c9f9\"><i>Can hold 9 servings</i></font>",
+	"blockdesc-metalpotdirty-iron-empty": "<font color=\"#99c9f9\"><i>Can hold 10 servings</i></font>",
+	"blockdesc-metalpotdirty-meteoriciron-empty": "<font color=\"#99c9f9\"><i>Can hold 11 servings</i></font>",
+	"blockdesc-metalpotdirty-gold-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalpotdirty-silver-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalpotdirty-electrum-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
+	"blockdesc-metalpotdirty-steel-empty": "<font color=\"#99c9f9\"><i>Can hold 13 servings</i></font>",
+	"blockdesc-metalpotdirty-stainlesssteel-empty": "<font color=\"#99c9f9\"><i>Can hold 14 servings</i></font>",
 
 	"block-rawdecovessel-harvest": "Raw storage vessel (Harvest)",
 	"block-rawdecovessel-honeydew": "Raw storage vessel (Honeydew)",
@@ -149,5 +164,8 @@
 	"game:divinationcloseresult": "The vision is pretty clear, a Translocator is close!",
 	"game:divinationnearresult": "You feel it resonating very close, a Translocator has to be nearby!",
 	"game:divinationnoresult": "You cannot divine any Translocator around here.",
-	"game:divinationnocharge": "This skull is lacking enough temporal charge for a divination right now."
+	"game:divinationnocharge": "This skull is lacking enough temporal charge for a divination right now.",
+	
+	"game:craftinginfo-temptransmutation-title": "GlooMeClasses: Temporal Transmutation",
+	"game:craftinginfo-transmutation-text": "<strong>Temporal Transmutation</strong><br><br>Temporal transmutation is a fairly lengthy process only meant to be started after one has acquired a means of reliable steel production. Once you have done so, make at least one <a href=\"handbook://block-gloomeclasses:metalbarrel-stainlesssteel\">Stainless Steel-plated Metal Barrel</a>. More will be exceedingly helpful, but aren't necessary for starting out. You will need more materials as stated below, that are highly recommended to be prepared ahead of time.<br><br><strong>Step 1</strong> - "
 }
