--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -262,6 +262,5 @@
 
 	"charattribute-clayformingPoints-5": "+5 voxels for each piece of clay used in clayforming",
 	"charattribute-caveStabilityLoss--0.15": "+15% faster temporal stability loss in caves",
-	"charattribute-caveStabilityLoss--1": "Gradual temporal stability loss when outside or when not in a room",
-	"charattribute-surfaceStabilityLoss--0.25": "Define me after checking that this works!"
+	"charattribute-surfaceStabilityLoss--0.25": "Gradual temporal stability loss when outside or when not in a room"
 }
