Crock and recipe for sealing it with Rosin in!

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -155,6 +155,8 @@
 	"block-rawdecoflowerpot-amber": "Raw flowerpot (Amber)",
 	"block-rawdecoflowerpot-rutile": "Raw flowerpot (Rutile)",
 
+	"block-refurbishedcrock-east": "Refurbished Crock",
+
 	"game:item-creature-locust-corrupt-sawblade-hacked": "Hacked Sawblade Locust",
 	"game:block-anvilpart-base-steel": "Anvil base (Steel)",
 	"game:block-anvilpart-top-steel": "Anvil top (Steel)",
