--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -86,6 +86,14 @@
 	"block-bloomerychimneyadvanced": "Advanced bloomery chimney",
 	"block-metalbarrel-stainlesssteel": "Stainless Steel-plated Metal Barrel",
 	"block-metalbarrel-tin": "Tin-plated Metal Barrel",
+	"block-gassifier-closed-north": "Gassifier",
+	"block-gassifier-open-north": "Gassifier",
+	"block-gassifier-lit-north": "Gassifier (Lit)",
+
+	"game:blockhelp-gassifier-opendoor": "Open the door",
+	"game:blockhelp-gassifier-closedoor": "Close the door",
+	"game:blockhelp-gassifier-refuel": "Add fuel",
+	"game:blockhelp-gassifier-ignite": "Ignite the Gassifier",
 
 	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has an increased chance to find nuggets",
 	"blockdesc-metalpot-copper-empty": "<font color=\"#99c9f9\"><i>Can hold 7 servings</i></font>",
@@ -173,10 +181,10 @@
 	"game:divinationnearresult": "You feel it resonating very close, a Translocator has to be nearby!",
 	"game:divinationnoresult": "You cannot divine any Translocator around here.",
 	"game:divinationnocharge": "This skull is lacking enough temporal charge for a divination right now.",
-	
+
 	"game:craftinginfo-temptransmutation-title": "GlooMeClasses: Temporal Transmutation",
 	"game:craftinginfo-temptransmutation-text": "<strong>Temporal Transmutation</strong><br><font color=\"#FF2400\"><i>The Alchemist class is required for completing every step of this process</i></font><br><br>Temporal transmutation is a fairly lengthy process only meant to be started after one has acquired a means of reliable steel production. Once you have done so, make at least one <a href=\"handbook://block-gloomeclasses:metalbarrel-stainlesssteel\">Stainless Steel-plated Metal Barrel</a>. More will be exceedingly helpful, but aren't necessary for starting out. You will need more materials as stated below, that are highly recommended to be prepared ahead of time.<br><br><br><strong>Step 1</strong> - After you have obtained some <a href=\"handbook://item-gear-rusty\">Rusty gears</a>, seal 1 in a stainless steel barrel filled with 1 litre of <a href=\"handbook://item-acid-full-sulfuric\">Sulfuric acid</a> for 2 days. Once the 2 days are up, you will be left with a <a href=\"handbook://item-gloomeclasses:gear-grimy\">Grimy Gear</a>.<br><br><strong>Step 2</strong> - After you have obtained your <a href=\"handbook://item-gloomeclasses:gear-grimy\">Grimy Gears</a>, seal 1 in a stainless steel barrel with 1 litre of <a href=\"handbook://item-dilutedboraxportion\">Diluted borax</a> for one day. This will net you 1 <a href=\"handbook://item-gloomeclasses:gear-steel\">Restored steel gear</a>.<br><br><strong>Step 3</strong> - Use a hammer with a temporal gear in your crafting inventory to get 4 <a href=\"handbook://item-gloomeclasses:primamateria\">Prima Materia</a>. Next, seal 4 Prima Materia into the barrel, with 10 litres of <a href=\"handbook://item-waterportion\">Water</a> for every 4. After 19 hours, you will be left with 10 litres of <a href=\"handbook://item-gloomeclasses:solutionportion-weaktemporal\">Weak Temporal Solution</a>.<br><br><strong>Step 4</strong> - Now that you have your <a href=\"handbook://item-gloomeclasses:solutionportion-weaktemporal\">Weak Temporal Solution</a> and your <a href=\"handbook://item-gloomeclasses:gear-steel\">Restored steel gears</a>, you are ready to make <a href=\"handbook://item-gloomeclasses:gear-preptempgear\">Prepared Temporal Gears</a>. Get 5 of your steel gears, and 10 litres of weak temporal solution into a stainless steel barrel. Seal it, and after one day you will have made 5 prepared temporal gears.<br><br><strong>Step 5</strong> - Next, crush 2 more gears and get 8 Prima materia. Seal it in a stainless steel barrel with 10 liters of weak temporal solution for 19 hours to get 10 litres of <a href=\"handbook://item-gloomeclasses:solution-strongtemporal\">Strong temporal solution</a>.<br><br><strong>Step 6</strong> - Now, for the final step. Get your 10 litres of <a href=\"handbook://item-gloomeclasses:solution-strongtemporal\">Strong temporal solution</a> and 5 <a href=\"handbook://item-gloomeclasses:gear-preptempgear\">Prepared Temporal Gears</a>, then seal them in a stainless steel barrel for 3 days. After 3 days, you will have turned 4 <a href=\"handbook://item-gear-temporal\">Temporal Gears</a> into 5!",
-	
+
 	"game:craftinginfo-stainlessfoundry-title": "GlooMeClasses: Stainless Steel",
 	"game:craftinginfo-stainlessfoundry-text": "<strong>Creating Stainless steel</strong><br><font color=\"#FF2400\"><i>The Smith and Mason classes are required for completing different steps in this process</i></font><br><br>The creation of Stainless Steel is a straightforward process. Though the materials required are expensive, you shouldn't have too much difficulty following along.<br><br><br><strong>Step 1</strong> - Find your local mason, and have them make you an <a href=\"handbook://block-gloomeclasses:bloomerybaseadvanced-north\">Advanced bloomery base</a> & <a href=\"handbook://block-gloomeclasses:bloomerychimneyadvanced\">Advanced bloomery chimney</a>.<br><br><strong>Step 2</strong> - Now, either as a smith or by coercing your local smith, make some <a href=\"handbook://block-gloomeclasses:stainless-steel-mix\">Stainless Steel Mix</a>.<br><br><strong>Step 3</strong> - Now, place the advanced bloomery down, and stuff the stainless steel mix inside. You can fit a total of 160 stainless steel mix inside, for a total of 8 ingots. You can also fit 8 fuel in as well. Fuel it, light it, and after a few in game hours you'll be left with some stainless steel ingots."
 }
