lang file fixes

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -86,9 +86,9 @@
 	"block-bloomerychimneyadvanced": "Advanced bloomery chimney",
 	"block-metalbarrel-stainlesssteel": "Stainless Steel-plated Metal Barrel",
 	"block-metalbarrel-tin": "Tin-plated Metal Barrel",
-	"block-gassifier-closed-north": "Gassifier",
-	"block-gassifier-open-north": "Gassifier",
-	"block-gassifier-lit-north": "Gassifier (Lit)",
+	"block-gassifier-closed-north": "Gasifier",
+	"block-gassifier-open-north": "Gasifier",
+	"block-gassifier-lit-north": "Gasifier (Lit)",
 
 	"game:blockhelp-gassifier-opendoor": "Open the door",
 	"game:blockhelp-gassifier-closedoor": "Close the door",
@@ -118,6 +118,8 @@
 	"blockdesc-metalpotdirty-electrum-empty": "<font color=\"#99c9f9\"><i>Can hold 12 servings</i></font>",
 	"blockdesc-metalpotdirty-steel-empty": "<font color=\"#99c9f9\"><i>Can hold 13 servings</i></font>",
 	"blockdesc-metalpotdirty-stainlesssteel-empty": "<font color=\"#99c9f9\"><i>Can hold 14 servings</i></font>",
+	"blockdesc-metalbarrel-stainlesssteel": "<font color=\"#99c9f9\"><i>Can hold 60 litres</i></font>",
+	"blockdesc-metalbarrel-tin": "<font color=\"#99c9f9\"><i>Can hold 60 litres</i></font>",
 
 	"block-rawdecovessel-harvest": "Raw storage vessel (Harvest)",
 	"block-rawdecovessel-honeydew": "Raw storage vessel (Honeydew)",
@@ -175,12 +177,12 @@
 	"game:block-anvilpart-base-steel": "Anvil base (Steel)",
 	"game:block-anvilpart-top-steel": "Anvil top (Steel)",
 
-	"game:divinationlongresult": "There is a Translocator nearing the edge of your divination...",
-	"game:divinationmidresult": "The divination seems a little clear, a Translocator is around but still a way off.",
-	"game:divinationcloseresult": "The vision is pretty clear, a Translocator is close!",
-	"game:divinationnearresult": "You feel it resonating very close, a Translocator has to be nearby!",
-	"game:divinationnoresult": "You cannot divine any Translocator around here.",
-	"game:divinationnocharge": "This skull is lacking enough temporal charge for a divination right now.",
+	"game:divinationlongresult": "Faint echoes ripple at the edge of your vision. A translocator stirs in the far unseen.",
+	"game:divinationmidresult": "Through the veil, a shape begins to coalesce. A translocator stirs, yet distance veils its presence.",
+	"game:divinationcloseresult": "The mists part with purpose. A translocator pulses not far from here.",
+	"game:divinationnearresult": "A deep resonance thrums beneath your thoughts. The translocator is almost within reach.",
+	"game:divinationnoresult": "You press into the beyond, but the silence is absolute. No translocator answers your call.",
+	"game:divinationnocharge": "The skull lies dormant. drained of temporal essence, it offers no glimpse into the beyond.",
 
 	"game:craftinginfo-temptransmutation-title": "GlooMeClasses: Temporal Transmutation",
 	"game:craftinginfo-temptransmutation-text": "<strong>Temporal Transmutation</strong><br><font color=\"#FF2400\"><i>The Alchemist class is required for completing every step of this process</i></font><br><br>Temporal transmutation is a fairly lengthy process only meant to be started after one has acquired a means of reliable steel production. Once you have done so, make at least one <a href=\"handbook://block-gloomeclasses:metalbarrel-stainlesssteel\">Stainless Steel-plated Metal Barrel</a>. More will be exceedingly helpful, but aren't necessary for starting out. You will need more materials as stated below, that are highly recommended to be prepared ahead of time.<br><br><br><strong>Step 1</strong> - After you have obtained some <a href=\"handbook://item-gear-rusty\">Rusty gears</a>, seal 1 in a stainless steel barrel filled with 1 litre of <a href=\"handbook://item-acid-full-sulfuric\">Sulfuric acid</a> for 2 days. Once the 2 days are up, you will be left with a <a href=\"handbook://item-gloomeclasses:gear-grimy\">Grimy Gear</a>.<br><br><strong>Step 2</strong> - After you have obtained your <a href=\"handbook://item-gloomeclasses:gear-grimy\">Grimy Gears</a>, seal 1 in a stainless steel barrel with 1 litre of <a href=\"handbook://item-dilutedboraxportion\">Diluted borax</a> for one day. This will net you 1 <a href=\"handbook://item-gloomeclasses:gear-steel\">Restored steel gear</a>.<br><br><strong>Step 3</strong> - Use a hammer with a temporal gear in your crafting inventory to get 4 <a href=\"handbook://item-gloomeclasses:primamateria\">Prima Materia</a>. Next, seal 4 Prima Materia into the barrel, with 10 litres of <a href=\"handbook://item-waterportion\">Water</a> for every 4. After 19 hours, you will be left with 10 litres of <a href=\"handbook://item-gloomeclasses:solutionportion-weaktemporal\">Weak Temporal Solution</a>.<br><br><strong>Step 4</strong> - Now that you have your <a href=\"handbook://item-gloomeclasses:solutionportion-weaktemporal\">Weak Temporal Solution</a> and your <a href=\"handbook://item-gloomeclasses:gear-steel\">Restored steel gears</a>, you are ready to make <a href=\"handbook://item-gloomeclasses:gear-preptempgear\">Prepared Temporal Gears</a>. Get 5 of your steel gears, and 10 litres of weak temporal solution into a stainless steel barrel. Seal it, and after one day you will have made 5 prepared temporal gears.<br><br><strong>Step 5</strong> - Next, crush 2 more gears and get 8 Prima materia. Seal it in a stainless steel barrel with 10 liters of weak temporal solution for 19 hours to get 10 litres of <a href=\"handbook://item-gloomeclasses:solution-strongtemporal\">Strong temporal solution</a>.<br><br><strong>Step 6</strong> - Now, for the final step. Get your 10 litres of <a href=\"handbook://item-gloomeclasses:solution-strongtemporal\">Strong temporal solution</a> and 5 <a href=\"handbook://item-gloomeclasses:gear-preptempgear\">Prepared Temporal Gears</a>, then seal them in a stainless steel barrel for 3 days. After 3 days, you will have turned 4 <a href=\"handbook://item-gear-temporal\">Temporal Gears</a> into 5!",
